--- a/deployment/sandbox-v2/playbooks/env.yml
+++ b/deployment/sandbox-v2/playbooks/env.yml
@@ -6,6 +6,8 @@
     kube_config: '{{mz_kube_config}}'  
   tasks:
     - {name: 'Create folder', file: {name: '{{postgres.local_storage_path}}', state: directory}}
+    - {name: 'Create folder', file: {name: '{{hdfs_dn_local_storage_path}}', state: directory}}
+    - {name: 'Create folder', file: {name: '{{hdfs_nn_local_storage_path}}', state: directory}}
 
 - hosts: console
   gather_facts: true
