--- a/deployment/sandbox-v2/helm/charts/dmzregproc/templates/receiver-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/dmzregproc/templates/receiver-dep.yaml
@@ -5,7 +5,6 @@ metadata:
   namespace: {{ .Values.namespace }} 
   labels:
     app: {{ .Values.services.receiver.serviceName }}
-    component: {{ .Values.component }} 
     
 spec:
   replicas: 1
@@ -22,7 +21,7 @@ spec:
     metadata:
       labels:
         app: {{ .Values.services.receiver.serviceName }} 
-        component: {{ .Values.component }} 
+        component: service-hazelcast-server
     spec:
       containers:
       - name: {{ .Values.services.receiver.serviceName }} 
