--- a/deployment/sandbox-v2/helm/charts/dmzregproc/values.yaml
+++ b/deployment/sandbox-v2/helm/charts/dmzregproc/values.yaml
@@ -33,7 +33,7 @@ archival:   # Packets are archived here in addition to HDFS
 
 services:
   receiver:
-    serviceName: regproc-packet-receiver-service 
+    serviceName: regproc-packet-receiver-stage
     dockerImage: mosipdev/registration-processor-packet-receiver-stage
     dockerTag: 1.0.9
     ports:
@@ -44,7 +44,7 @@ services:
     ingressPath: /registrationprocessor/v1/packetreceiver
     healthUrl: /registrationprocessor/v1/packetreceiver/actuator/health
   camel:
-    serviceName: regproc-camel-dmz-stage
+    serviceName: regproc-camel-stage
     dockerImage: mosipdev/registration-processor-common-camel-bridge
     dockerTag: 1.0.9
     ports:
