--- a/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-qa.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/registration-processor-qa.properties
@@ -19,8 +19,6 @@ registration.processor.biometric.reference.url=http://regproc-bio-dedupe-service
 registration.processor.abis.maxResults=30
 #Dummy Tag for face in cbeff file
 registration.processor.abis.targetFPIR=30
-#Threshold value for biometric quality
-registration.processor.abis.threshold=60
 #Dummy Tag for fingerprint in cbeff file
 TESTFINGERPRINT=ns2:TestFinger
 #Dummy Tag for iris in cbeff file
@@ -149,6 +147,9 @@ DIGITALSIGNATURE=http://kernel-signature-service/v1/signature/sign
 #Digital Signature Id
 mosip.registration.processor.digital.signature.id=io.mosip.registration.processor
 
+# Url from where packets need to be picked up DMZ (landing zone)
+NGINXDMZURL=http://dmzworker0:30080/registrationprocessor/v1/dmzpacketserver
+
 #--------Registration Processor Rest Client API's-----------
 DMZCRYPTOMANAGERDECRYPT=http://kernel-cryptomanager-service/v1/cryptomanager/decrypt
 
@@ -256,21 +257,6 @@ mosip.kernel.virus-scanner.port=30310
 #Virus scanner application request id
 registration.processor.application.id=REGISTRATION
 registration.processor.rid.machineidsubstring=10
-
-#---------Packet Uploader Stage------------
-#Packet uploader server host
-registration.processor.dmz.server.host=dmzworker0
-#Packet uploader server user
-registration.processor.dmz.server.user=sftpuser
-#Packet uploader server port
-registration.processor.dmz.server.port=22
-#Packet uploader server protocol
-registration.processor.dmz.server.protocal=sftp
-#Either password or ppk file should be provided
-#registration.processor.dmz.server.password=Madmin@12345
-registration.processor.vm.ppk=sftp_key
-#The sftp server maximum session to be created
-registration.processor.sftp.connection.pool.max.session=10
 
 #---------Message Sender Stage----------------------
 #Mapping Identity json to map with the applicant id json
