--- a/deployment/sandbox-v2/helm/charts/kernel/templates/key-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/templates/key-dep.yaml
@@ -38,6 +38,8 @@ spec:
           value: {{ .Values.artifactoryUrl }} 
         - name: is_glowroot_env
           value: absent
+        - name: PKCS11_PROXY_SOCKET
+          value: tcp://{{ .Values.services.softhsm.serviceName }}:{{ .Values.services.softhsm.servicePort }}
         ports:
         - containerPort: {{ .Values.services.key.containerPort }}
         readinessProbe:
