--- a/deployment/sandbox-v2/helm/charts/kernel/templates/prid-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/templates/prid-dep.yaml
@@ -28,13 +28,19 @@ spec:
       - name: {{ .Values.services.prid.serviceName }} 
         image: {{ .Values.services.prid.dockerImage }}:{{ .Values.services.prid.dockerTag }} 
         env:
-        # TODO: Correct docker - we have to write variables names explicitly
-        - name: spring.profiles.active
+#        # TODO: Correct docker - we have to write variables names explicitly
+        - name: active_profile_env
           value: {{ .Values.activeProfileEnv }} 
-        - name: spring.cloud.config.label
+        - name: spring_config_label_env
           value: {{ .Values.springConfigLabel }} 
-        - name: spring.cloud.config.uri
+        - name: spring_config_url_env
           value: {{ .Values.configServerUrl }} 
+#        - name: spring.profiles.active
+#          value: {{ .Values.activeProfileEnv }} 
+#        - name: spring.cloud.config.label
+#          value: {{ .Values.springConfigLabel }} 
+#        - name: spring.cloud.config.uri
+#          value: {{ .Values.configServerUrl }} 
         - name: artifactory_url_env
           value: {{ .Values.artifactoryUrl }} 
         - name: is_glowroot_env
