--- a/deployment/sandbox-v2/playbooks/kernel.yml
+++ b/deployment/sandbox-v2/playbooks/kernel.yml
@@ -1,9 +1,14 @@
 # This play installs all Kernel services using Helm
-- hosts: console
+- hosts: mzworker0
   gather_facts: true
-  vars:   
-    kube_config: '{{mz_kube_config}}' 
-    helm_chart: '{{charts_root}}/kernel'
-    install_name: kernel
   roles:
-    - {role: helm, tags: [kernel]} 
+    - {role: softhsm, tags: [softhsm]}
+
+#- hosts: console
+#  gather_facts: true
+#  vars:   
+#    kube_config: '{{mz_kube_config}}' 
+#    helm_chart: '{{charts_root}}/kernel'
+#    install_name: kernel
+#  roles:
+#    - {role: helm, tags: [kernel]} 
