--- a/deployment/sandbox-v2/helm/charts/kernel/templates/notifier-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/templates/notifier-dep.yaml
@@ -1,32 +1,32 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Values.services.sig.serviceName }} 
+  name: {{ .Values.services.notifier.serviceName }} 
   namespace: {{ .Values.namespace }} 
   labels:
-    app: {{ .Values.services.sig.serviceName }}
+    app: {{ .Values.services.notifier.serviceName }}
     component: {{ .Values.component }} 
     
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: {{ .Values.services.sig.serviceName }} 
+      app: {{ .Values.services.notifier.serviceName }} 
   minReadySeconds: 10
   strategy:
     type: RollingUpdate
     rollingUpdate:
-      maxUnavailable: 0
+      maxUnavailable: 0 
       maxSurge: 1 
   template:
     metadata:
       labels:
-        app: {{ .Values.services.sig.serviceName }} 
+        app: {{ .Values.services.notifier.serviceName }} 
         component: {{ .Values.component }} 
     spec:
       containers:
-      - name: {{ .Values.services.sig.serviceName }} 
-        image: {{ .Values.services.sig.dockerImage }}:{{ .Values.services.sig.dockerTag }} 
+      - name: {{ .Values.services.notifier.serviceName }} 
+        image: {{ .Values.services.notifier.dockerImage }}:{{ .Values.services.notifier.dockerTag }} 
         env:
         - name: active_profile_env
           value: {{ .Values.activeProfileEnv }} 
@@ -39,16 +39,16 @@ spec:
         - name: is_glowroot_env
           value: absent
         ports:
-        - containerPort: {{ .Values.services.sig.containerPort }}
+        - containerPort: {{ .Values.services.notifier.containerPort }}
         readinessProbe:
           httpGet:
-            path: {{ .Values.services.sig.healthUrl }} 
-            port: {{ .Values.services.sig.containerPort }} 
+            path: {{ .Values.services.notifier.healthUrl }} 
+            port: {{ .Values.services.notifier.containerPort }} 
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
           periodSeconds: {{ .Values.probe.period }} 
         livenessProbe:
           httpGet:
-            path: {{ .Values.services.sig.healthUrl }} 
-            port: {{ .Values.services.sig.containerPort }} 
+            path: {{ .Values.services.notifier.healthUrl }} 
+            port: {{ .Values.services.notifier.containerPort }} 
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
           periodSeconds: {{ .Values.probe.period }}
