--- a/deployment/sandbox-v2/helm/charts/kernel/templates/softhsm-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/templates/softhsm-dep.yaml
@@ -1,32 +1,32 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Values.services.applicant.serviceName }} 
+  name: {{ .Values.services.softhsm.serviceName }} 
   namespace: {{ .Values.namespace }} 
   labels:
-    app: {{ .Values.services.applicant.serviceName }}
+    app: {{ .Values.services.softhsm.serviceName }}
     component: {{ .Values.component }} 
     
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: {{ .Values.services.applicant.serviceName }} 
+      app: {{ .Values.services.softhsm.serviceName }} 
   minReadySeconds: 10
   strategy:
     type: RollingUpdate
     rollingUpdate:
-      maxUnavailable: 0
+      maxUnavailable: 0 
       maxSurge: 1 
   template:
     metadata:
       labels:
-        app: {{ .Values.services.applicant.serviceName }} 
+        app: {{ .Values.services.softhsm.serviceName }} 
         component: {{ .Values.component }} 
     spec:
       containers:
-      - name: {{ .Values.services.applicant.serviceName }} 
-        image: {{ .Values.services.applicant.dockerImage }}:{{ .Values.services.applicant.dockerTag }} 
+      - name: {{ .Values.services.softhsm.serviceName }} 
+        image: {{ .Values.services.softhsm.dockerImage }}:{{ .Values.services.softhsm.dockerTag }} 
         env:
         - name: active_profile_env
           value: {{ .Values.activeProfileEnv }} 
@@ -39,16 +39,21 @@ spec:
         - name: is_glowroot_env
           value: absent
         ports:
-        - containerPort: {{ .Values.services.applicant.containerPort }}
-        readinessProbe:
-          httpGet:
-            path: {{ .Values.services.applicant.healthUrl }} 
-            port: {{ .Values.services.applicant.containerPort }} 
+        - containerPort: {{ .Values.services.softhsm.containerPort }}
+        readinessProbe:  #Since no actuator, we watch tcp port.
+          tcpSocket:
+            port: {{ .Values.services.softhsm.containerPort }}
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
           periodSeconds: {{ .Values.probe.period }} 
         livenessProbe:
-          httpGet:
-            path: {{ .Values.services.applicant.healthUrl }} 
-            port: {{ .Values.services.applicant.containerPort }} 
+          tcpSocket:
+            port: {{ .Values.services.softhsm.containerPort }}
           initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }}
+          periodSeconds: {{ .Values.probe.period }} 
+        volumeMounts:
+        - name: hsm-data
+          mountPath: /softhsm # See notes above
+      volumes:
+      - name: hsm-data
+        persistentVolumeClaim:
+          claimName: {{ .Values.services.softhsm.pvcName }} 
