--- a/deployment/sandbox-v2/helm/charts/kernel/templates/softhsm-pv.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/templates/softhsm-pv.yaml
@@ -1,20 +1,19 @@
----
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: {{ .Values.pvName }} 
+  name: {{ .Values.services.softhsm.pvName }} 
   labels:
-    name: {{ .Values.pvName }} 
+    name: {{ .Values.services.softhsm.pvName }} 
 spec:
   capacity:
-    storage: {{ .Values.pvSize }} 
+    storage: {{ .Values.services.softhsm.pvSize }}  
   volumeMode: Filesystem
   accessModes:
   - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain # Only this policy supported for this type of PV 
-  storageClassName: {{ .Values.localStorageName }} 
+  storageClassName: {{ .Values.services.softhsm.localStorageName }} 
   local:
-    path: {{ .Values.localStoragePath }} 
+    path: {{ .Values.services.softhsm.localStoragePath }} 
   nodeAffinity:
     required:
       nodeSelectorTerms:
@@ -22,5 +21,5 @@ spec:
         - key: kubernetes.io/hostname
           operator: In
           values:
-          - {{ .Values.localStorageHostname }} 
+          - {{ .Values.services.softhsm.localStorageHostname }} 
 
