--- a/deployment/sandbox-v2/helm/charts/prereg/templates/ui-configmap.yaml
+++ b/deployment/sandbox-v2/helm/charts/prereg/templates/ui-configmap.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  config.json: '{"BASE_URL":"{{ .Values.services.ui.apiHost }}",  "PRE_REG_URL" : "/preregistration/v1/"}'
+  config.json: '{"BASE_URL":"{{ tpl .Values.services.ui.apiHost . }}",  "PRE_REG_URL" : "/preregistration/v1/"}'
 kind: ConfigMap
 metadata:
   name: {{ .Values.services.ui.configName }}
