Properties updated for 1.0.9

--- a/deployment/sandbox-v2/roles/config-repo/files/properties/application-qa.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/application-qa.properties
@@ -37,6 +37,7 @@ mosip.id.validation.identity.addressLine3.[*].value=^(?=.{0,50}$).*
 mosip.id.validation.identity.region.[*].value=^(?=.{0,50}$).*
 mosip.id.validation.identity.province.[*].value=^(?=.{0,50}$).*
 mosip.id.validation.identity.city.[*].value=^(?=.{0,50}$).*
+mosip.id.validation.identity.[*].[*].language=^[(?i)a-z]{3}$
 mosip.id.validation.identity.referenceIdentityNumber=^([0-9]{10,30})$
 mosip.country.code=MOR
 
@@ -201,6 +202,10 @@ mosip.kernel.uin.length.conjugative-even-digits-limit=3
 
 #------------------------Auth-Adapter-----------------------------------------------
 auth.server.validate.url=http://kernel-auth-service/v1/authmanager/authorize/admin/validateToken
+mosip.keycloak.base-url=http://keycloak
+mosip.keycloak.issuerUrl=${mosip.keycloak.base-url}/auth/realms/mosip
+auth-token-generator.rest.issuerUrl=${mosip.keycloak.issuerUrl}
+
 #----------------------- Crypto --------------------------------------------------
 #Crypto asymmetric algorithm name
 mosip.kernel.crypto.asymmetric-algorithm-name=RSA/ECB/OAEPWITHSHA-256ANDMGF1PADDING
@@ -363,3 +368,14 @@ mosip.kernel.salt-generator.end-sequence=999
 server.max-http-header-size=10000000
 
 mosip.kernel.auth.adapter.ssl-bypass=true
+mosip.kernel.auth.appid-realm-map={prereg:'preregistration',ida:'mosip',registrationclient:'mosip',regproc:'mosip',partner:'mosip',resident:'mosip',admin:'mosip'}
+
++#---------------------------------prometheus : Metrics related configurations---------------------------------------------------#
+management.endpoint.metrics.enabled=true
+management.endpoints.web.exposure.include=*
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
+
+mosip.kernel.syncdata-service-idschema-url=${mosip.masterdata.base.url}/v1/masterdata/idschema/latest
+mosip.kernel.syncdata-service-dynamicfield-url=${mosip.masterdata.base.url}v1/masterdata/dynamicfields
+mosip.kernel.keymanager-service-validate-url=${mosip.keymanager.base.url}/v1/keymanager/validate
