--- a/deployment/sandbox-v2/roles/config-repo/files/properties/pre-registration-qa.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/pre-registration-qa.properties
@@ -71,11 +71,11 @@ holiday.exceptional.url=${masterdata.resource.url}/exceptionalholidays
 working.day.url=${masterdata.resource.url}/workingdays
 
 # Email service
-email.service.env=http://kernel-emailnotification-service
+email.service.env=http://kernel-notification-service
 email.service.contextpath=emailnotifier
 
 # SMS service
-sms.service.env=http://kernel-smsnotification-service
+sms.service.env=http://kernel-notification-service
 sms.service.contextpath=smsnotifier
 
 
@@ -84,8 +84,8 @@ audit.service.env=http://kernel-auditmanager-service
 audit.service.contextpath=auditmanager
 
 # Crypto service
-crypto.service.env=http://kernel-cryptomanager-service
-crypto.service.contextpath=cryptomanager
+crypto.service.env=http://kernel-keymanager-service
+crypto.service.contextpath=keymanager
 
 # Auth service
 kernel.auth.env=http://kernel-auth-service
@@ -100,7 +100,7 @@ sendOtp.resource.url=${kernel.auth.env}/${masterdata.service.version}/${kernel.a
 otpChannel.mobile=mobile
 otpChannel.email=email
 userIdType=USERID
-appId=preregistration
+appId=prereg
 mosip.preregistration.sendotp.id=mosip.pre-registration.login.sendotp
 mosip.preregistration.validateotp.id=mosip.pre-registration.login.useridotp
 mosip.preregistration.invalidatetoken.id=mosip.pre-registration.login.invalidate
@@ -193,7 +193,7 @@ mosip.preregistration.booking.exception.id=mosip.preregistration.booking.parse.e
 # ----------- BatchJob--------
 
 # Determines application id for batch job authenticaion
-mosip.batch.token.authmanager.appId=preregistration
+mosip.batch.token.authmanager.appId=prereg
 
 # Determines user name for batch job authenticaion
 mosip.batch.token.authmanager.userName=mosip-prereg-client
