--- a/deployment/sandbox-v2/helm/charts/kernel/templates/idgen-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/templates/idgen-dep.yaml
@@ -27,6 +27,7 @@ spec:
       containers:
       - name: {{ .Values.services.idgen.serviceName }} 
         image: {{ .Values.services.idgen.dockerImage }}:{{ .Values.services.idgen.dockerTag }} 
+        imagePullPolicy: Always # TODO: Temporary for debugging.  Remove.
         env:
         # TODO: Correct docker - we have to write variables names explicitly
         - name: active_profile_env
@@ -35,12 +36,6 @@ spec:
           value: {{ .Values.springConfigLabel }} 
         - name: spring_config_url_env
           value: {{ .Values.configServerUrl }} 
-#        - name: spring.profiles.active
-#          value: {{ .Values.activeProfileEnv }} 
-#        - name: spring.cloud.config.label
-#          value: {{ .Values.springConfigLabel }} 
-#        - name: spring.cloud.config.uri
-#          value: {{ .Values.configServerUrl }} 
         - name: artifactory_url_env
           value: {{ .Values.artifactoryUrl }} 
         - name: is_glowroot_env
