--- a/deployment/sandbox-v2/helm/charts/kernel/templates/notifier-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/templates/notifier-dep.yaml
@@ -40,15 +40,15 @@ spec:
           value: absent
         ports:
         - containerPort: {{ .Values.services.notifier.containerPort }}
-        readinessProbe:
-          httpGet:
-            path: {{ .Values.services.notifier.healthUrl }} 
-            port: {{ .Values.services.notifier.containerPort }} 
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }} 
-        livenessProbe:
-          httpGet:
-            path: {{ .Values.services.notifier.healthUrl }} 
-            port: {{ .Values.services.notifier.containerPort }} 
-          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
-          periodSeconds: {{ .Values.probe.period }}
+#        readinessProbe:  # TODO: Disabled. for some reason not working.
+#          httpGet:
+#            path: {{ .Values.services.notifier.healthUrl }} 
+#            port: {{ .Values.services.notifier.containerPort }} 
+#          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
+#          periodSeconds: {{ .Values.probe.period }} 
+#        livenessProbe:
+#          httpGet:
+#            path: {{ .Values.services.notifier.healthUrl }} 
+#            port: {{ .Values.services.notifier.containerPort }} 
+#          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
+#          periodSeconds: {{ .Values.probe.period }}
