[MOSIP-1062] Softhsm moved to separate helm chart.  Regproc playbook updated.

--- a/deployment/sandbox-v2/helm/charts/kernel/templates/key-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/templates/key-dep.yaml
@@ -39,7 +39,7 @@ spec:
         - name: is_glowroot_env
           value: absent
         - name: PKCS11_PROXY_SOCKET
-          value: tcp://{{ .Values.services.softhsm.serviceName }}:{{ .Values.services.softhsm.servicePort }}
+          value: {{ .Values.services.key.hsmUrl }} 
         ports:
         - containerPort: {{ .Values.services.key.containerPort }}
         readinessProbe:
