--- a/deployment/sandbox-v2/helm/charts/kernel/values.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/values.yaml
@@ -66,6 +66,7 @@ services:
     dockerTag: 1.0.9
     containerPort: 8088
     servicePort: 80
+    hsmUrl: tcp://softhsm:80   # Should match with softhsm chart service name and port
     ingressPath: /v1/keymanager
     healthUrl: /v1/keymanager/actuator/health
   notifier:
@@ -92,20 +93,4 @@ services:
     servicePort: 80
     ingressPath: '' 
     healthUrl: /v1/ridgenerator/actuator/health
-  softhsm:
-    serviceName: softhsm
-    dockerImage: mosipdev/softhsm
-    dockerTag: v1
-    pvName: softhsm-pv
-    pvSize: 20Mi 
-    localStorageName: softhsm-local-storage  
-    localStorageHostname: mzworker0
-    localStoragePath: /mnt/mosip_data/softhsm
-    confFile: softhsm2.conf
-    mountPath: /softhsm
-    pvcName: softhsm-pvc
-    containerPort: 5666
-    servicePort: 80
-    ingressPath: '' 
-    healthUrl: ''
 
