--- a/deployment/sandbox-v2/helm/charts/softhsm/templates/softhsm-pv.yaml
+++ b/deployment/sandbox-v2/helm/charts/softhsm/templates/softhsm-pv.yaml
@@ -1,19 +1,19 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: {{ .Values.services.softhsm.pvName }} 
+  name: {{ .Values.pv.name }} 
   labels:
-    name: {{ .Values.services.softhsm.pvName }} 
+    name: {{ .Values.pv.name }} 
 spec:
   capacity:
-    storage: {{ .Values.services.softhsm.pvSize }}  
+    storage: {{ .Values.pv.size }}  
   volumeMode: Filesystem
   accessModes:
   - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain # Only this policy supported for this type of PV 
-  storageClassName: {{ .Values.services.softhsm.localStorageName }} 
+  storageClassName: {{ .Values.localStorage.name }} 
   local:
-    path: {{ .Values.services.softhsm.localStoragePath }} 
+    path: {{ .Values.localStorage.path }} 
   nodeAffinity:
     required:
       nodeSelectorTerms:
@@ -21,5 +21,5 @@ spec:
         - key: kubernetes.io/hostname
           operator: In
           values:
-          - {{ .Values.services.softhsm.localStorageHostname }} 
+          - {{ .Values.localStorage.hostname }} 
 
