--- a/deployment/sandbox-v2/playbooks/regproc.yml
+++ b/deployment/sandbox-v2/playbooks/regproc.yml
@@ -1,6 +1,7 @@
 # All plays related to registration processor module
 #
 
+# Prep
 - hosts: dmzworker0  # One of the dmz nodes is chosen for packet landing and archival
   gather_facts: true
   vars:   
@@ -8,37 +9,23 @@
   tasks:
     - {name: 'Create landing folder', file: {name: '{{regproc_landing_folder}}', state: directory}}
 
-# DMZ services
+# Run DMZ regproc
 - hosts: console
   gather_facts: true
   vars:   
-    kube_config: '{{dmz_kube_config}}'  # Deploy all these on dmz cluster
+    kube_config: '{{dmz_kube_config}}' 
+    helm_chart: '{{charts_root}}/dmzregproc'
+    install_name: dmzregproc
   roles:
-    - {role: ingress/dmz-ingress, tags: [dmz-ingress, regproc]}
-    - {role: regproc/camel-dmz, tags: [camel-dmz, regproc]}
-    - {role: regproc/packet-receiver, tags: [packet-receiver, regproc]}
-    - {role: regproc/reg-status, tags: [reg-status, regproc]}
- 
-# MZ services
-- hosts: console
-  gather_facts: true
-  vars_files:
-    - ../roles/config-server/defaults/main.yml 
+    - {role: helm, tags: [dmzregproc]} 
 
+# Run MZ regproc
+- hosts: console
+  gather_facts: true
   vars:   
-    kube_config: '{{mz_kube_config}}'  # Deploy all these on mz cluster
+    kube_config: '{{mz_kube_config}}' 
+    helm_chart: '{{charts_root}}/regproc'
+    install_name: regproc 
   roles:
-    - {role: regproc/camel-mz, tags: [camel-mz, regproc]}
-    - {role: regproc/packet-uploader, tags: [packet-uploader, regproc]}
-    - {role: regproc/packet-validator, tags: [packet-validator, regproc]}
-    - {role: regproc/quality-checker, tags: [quality-checker, regproc]}
-    - {role: regproc/osi-validator, tags: [osi-validator, regproc]}
-    - {role: regproc/demo-dedupe, tags: [demo-dedupe, regproc]}
-    - {role: regproc/bio-dedupe, tags: [bio-dedupe, regproc]}
-    - {role: regproc/bio-dedupe-svc, tags: [bio-dedupe-svc, regproc]}
-    - {role: regproc/bio-auth, tags: [bio-auth, regproc]}
-    - {role: regproc/abis-handler, tags: [abis-handler, regproc]}
-    - {role: regproc/abis-middleware, tags: [abis-middleware, regproc]}
-    - {role: regproc/manual-verification, tags: [manual-verification, regproc]}
-    - {role: regproc/uin-generator, tags: [uin-generator, regproc]}
-    - {role: regproc/msg-sender, tags: [msg-sender, regproc]}
+    - {role: helm, tags: [regproc]} 
+ 
