[MOSIP-1062] Properties updated.

--- a/deployment/sandbox-v2/roles/config-repo/files/properties/pre-registration-qa.properties
+++ b/deployment/sandbox-v2/roles/config-repo/files/properties/pre-registration-qa.properties
@@ -72,11 +72,11 @@ working.day.url=${masterdata.resource.url}/workingdays
 
 # Email service
 email.service.env=http://kernel-notification-service
-email.service.contextpath=emailnotifier
+email.service.contextpath=notifier
 
 # SMS service
 sms.service.env=http://kernel-notification-service
-sms.service.contextpath=smsnotifier
+sms.service.contextpath=notifier
 
 
 # Audit service
